# llm-ran

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
deployment/: Dockerfile.vllm  apptainer_entry.sh
deployment/s6-rc.d/cloudflared/: run
deployment/s6-rc.d/ollama/: run
experiments/: benchmark.py  benchmark_base.py  k8s.py  k8s_straight_qa.py
llm_ran/: graph.py  kubernetes.py  logging.py  main.py  yaml.py
llm_ran/benchmark/: __main__.py  base.py  helpers.py  metrics.py  questions.py  run.py  test_straight_qa.py
llm_ran/frontend/: stream_lit.py
llm_ran/k8s/: codegen.py  direct.py  direct_impl.py  test.py
llm_ran/k8s_env/: scenario.py
llm_ran/k8s_env/manifests/: kustomization-sample.yaml  kustomization.yaml
llm_ran/k8s_env/manifests/scenarios/image-not-found/: kustomization.yaml
llm_ran/k8s_env/manifests/scenarios/liveness-probe/: kustomization.yaml
llm_ran/k8s_env/manifests/scenarios/node-affinity/: kustomization.yaml
llm_ran/k8s_env/manifests/scenarios/resource-constraint/: kustomization.yaml
llm_ran/kubernetes/: __init__.py  codegen.py  direct.py  direct_impl.py  test.py
llm_ran/llm/: __init__.py  models.py
llm_ran/test/: tools.py  utils.py  utils_test.py
notebooks/: finetuning.ipynb  kubernetes.ipynb  moe.ipynb  overall.ipynb  overview.ipynb  preprocess.ipynb  questions.ipynb  reasoning.ipynb  scaling.ipynb
scripts/: download_image.sh  local_build.sh  pull_models.sh  run_experiment.sh  scrape-oran-specs.py
