[tool.poetry]
name = "llm-ran"
version = "0.1.0"
description = ""
authors = ["Chen Xinyang <me@chenxy.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.2.53"
langchain = "^0.3.9"
langchain-ollama = "^0.2.0"
langsmith = "^0.1.147"
jupyter = "^1.1.1"
pydantic = "^2.10.2"
pypdf = "^5.1.0"
kubernetes = "^31.0.0"
pandas = "*"
matplotlib = "*"
numpy = "*"
langchain-anthropic = "^0.3.4"
langchain-openai = "^0.3.2"
langchain-experimental = "^0.3.4"
tqdm = "^4.67.1"

[tool.poetry.group.scraper]
optional = true

[tool.poetry.group.scraper.dependencies]
requests = "^2.32.3"
bbpb = "^1.4.1"
beautifulsoup4 = "^4.12.3"
wget = "^3.2"

[tool.poetry.group.serving]
optional = true

[tool.poetry.group.serving.dependencies]
streamlit = "^1.43.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
